--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -41,6 +41,9 @@ dependencies {
 
 	/* Test */
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	/* validation */
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
