--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -44,6 +44,9 @@ dependencies {
 
 	/* validation */
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	// Restdocs
+	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
 
 tasks.named('test') {
