--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,15 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules
+public
+**/jspm_packages/
 
-# testing
-/coverage
+#test
+/test
 
 # production
-/build
+/dist
 
 # misc
 .DS_Store
@@ -17,7 +17,32 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.AppleDouble
+.LSOverride
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
 
+# logs
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+**/logs
+**/yarn-debug.log*
+**/yarn-error.log*
+**/lerna-debug.log*
+**/.pnpm-debug.log*
+.eslintcache
+
+# cache
+.cache
+
+# vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
