--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -31,8 +31,6 @@ dependencies {
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-
-
 	/* Database */
 	runtimeOnly 'com.h2database:h2:1.4.200'
 	runtimeOnly 'org.orbisgis:h2gis:1.5.0'
@@ -56,6 +54,10 @@ dependencies {
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 	asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'
 
+	/* jwt */
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
 
 }
